--- a/config.json
+++ b/config.json
@@ -1,13 +1,43 @@
 {
-    "proxy_path": "http://localhost/istsos3/",
-    "loaders": {
-        "aiopg": {
-            "type": "aiopg",
-            "host": "localhost",
-            "port": "5432",
-            "user": "postgres",
-            "password": "postgres",
-            "database": "istsos3"
+    "proxy": "http://localhost",
+    "cache": false,
+    "loader": {
+        "type": "aiopg",
+        "host": "172.17.0.2",
+        "port": "5432",
+        "user": "postgres",
+        "password": "postgres",
+        "database": "istsos3"
+    },
+    "identification": {
+        "title": "IST Sensor Observation Service",
+        "abstract": "monitoring network",
+        "keywords": [
+            "SOS",
+            "SENSOR",
+            "NETWORK"
+        ],
+        "fees": "NONE",
+        "accessConstraints": "NONE"
+    },
+    "provider": {
+        "providerName": "Istitute Of Earth Science - SUPSI",
+        "providerSite": "http://www.supsi.ch/ist",
+        "serviceContact": {
+            "individualName": "Team Geomatica",
+            "positionName": "Data manager",
+            "contactInfo": {
+                "phone": "+41586666200",
+                "fax": "+41586666209"
+            },
+            "address": {
+                "deliveryPoint": "Campus Trevano",
+                "city": "Canobbio",
+                "administrativeArea": "Canton Ticino",
+                "postalCode": "6952",
+                "country": "Switzerland",
+                "email": "geoservice@supsi.ch"
+            }
         }
     }
 }
