--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "cache": false,
     "loader": {
         "type": "aiopg",
-        "host": "172.17.0.2",
+        "host": "localhost",
         "port": "5432",
         "user": "postgres",
         "password": "postgres",
