--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-
-pip3 install aiopg
-
-pip3 install jsonschema
-
-# http://lxml.de
-pip3 install lxml
+psycopg2
+aiopg
+jsonschema
+lxml
+pytest
+dateutils
