--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,13 @@
 services:
-    - doscio/istsos3-test:alpine
+- name: doscio/istsos3-test:alpine
+  alias: postgres
 
 variables:
   # Configure postgres service (https://hub.docker.com/_/postgres/)
-  POSTGRES_DB: istsos
-  POSTGRES_USER: postgres
-  POSTGRES_PASSWORD: postgres
-  POSTGRES_HOST: doscio__istsos3-test
+    POSTGRES_DB: istsos
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
+    POSTGRES_HOST: postgres
 
 before_script:
     - export PGPASSWORD=$POSTGRES_PASSWORD
