--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ before_script:
 
 test:
     image: doscio/istsos3-test:alpine
-
+    untrached: true
     script:
         - pytest -s istsos/test/actions/servers/rest/test_uom.py
         - pytest -s istsos/test/actions/servers/rest/test_observedProperties.py
@@ -24,3 +24,4 @@ test:
         - pytest -s istsos/test/actions/servers/rest/test_method.py
         - pytest -s istsos/test/actions/servers/rest/test_offering.py
         - pytest -s istsos/test/actions/servers/rest/test_specimen.py
+        - pytest -s istsos/test/actions/servers/rest/test_systemType.py
